--- a/index.html
+++ b/index.html
@@ -353,20 +353,17 @@
   <h1>Frequently Asked Questions</h1>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id sint totam illum excepturi eaque <br> illo laborum quibusdam repudiandae ipsam quae.</p>
 </div>
-
 <div class="text-center">
-  <p>
-    <a class="btn btn-outline-primary" data-bs-toggle="collapse" href="#collapseExample" role="dropdown" aria-expanded="false" aria-controls="collapseExample">
-      Link with href
-    </a>
-  </p>
-  <div class="collapse text-start" id="collapseExample">
-    <div class="card card-body">
-      Some placeholder content for the collapse component. This panel is hidden by default Lorem <br> ipsum dolor sit amet consectetur adipisicing elit. At, voluptates! but revealed when the user activates the relevant trigger.
-    </div>
+  <button class="dropdown-toggle btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Button with data-bs-target
+  </button>
+</p>
+<div class=" text-start collapse" id="collapseExample">
+  <div class="card card-body">
+    Some placeholder content for the collapse component. <br> This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
 </div>
-
+</div>
 </section>
 <!-- frequently qa end -->
 <section class="container text-center">
@@ -382,12 +379,7 @@
     <img class="m-3" src="https://anikahammedkhan.github.io/edtech/images/company/company-6.png" alt="">
   </div>
 </div>
-
 </section>
-
-
-
-
 <!-- footer start section -->
 <section class="bg-dark">
   <footer class="container text-center text-white p-3">
